--- a/public/views/index.html
+++ b/public/views/index.html
@@ -1,42 +1,87 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" />
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        /* 여기에 제공해주신 CSS 스타일 코드를 추가합니다 */
+    </style>
     <title>오골계</title>
-  </head>
-  <body>
+</head>
+<body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <div class="container">
-        <a class="navbar-brand" href="#">로고</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" href="/views">홈</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/views/cards.html">게시글</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/views/user.html">마이 페이지</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/views/signup.html">회원가입</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/views/signin.html">로그인</a>
-            </li>
-          </ul>
+        <div class="container">
+            <a class="navbar-brand" href="#">로고</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/views/user.html">마이 페이지</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/views/signup.html" id="signupButton">회원가입</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/views/signin.html">로그인</a>
+                    </li>
+                </ul>
+            </div>
         </div>
-      </div>
     </nav>
 
-    <!-- 여기에 내용을 추가하세요 -->
+    <!-- 회원가입 폼 -->
+  
 
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+</body>
+</html>
+
+
+
+    <!-- 회원 가입 모달
+    <div class="modal fade" id="signupModal" tabindex="-1" aria-labelledby="signupModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="signupModalLabel">회원 가입</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <form>
+              <div class="modal-body">
+                <form>
+                  <div class="mb-3">
+                    <label for="email" class="form-label">이메일</label>
+                    <input type="email" class="form-control" id="email" placeholder="이메일을 입력하세요" />
+                  </div>
+                  <div class="mb-3">
+                    <label for="name" class="form-label">이름</label>
+                    <input type="text" class="form-control" id="name" placeholder="이름을 입력하세요" />
+                  </div>
+                  <div class="mb-3">
+                    <label for="password" class="form-label">비밀번호</label>
+                    <input type="password" class="form-control" id="password" placeholder="비밀번호를 입력하세요" />
+                  </div>
+                  <div class="mb-3">
+                    <label for="confirmPassword" class="form-label">확인용 비밀번호</label>
+                    <input type="password" class="form-control" id="confirmPassword" placeholder="확인용 비밀번호를 입력하세요" />
+                  </div>
+                  <button type="submit" class="btn btn-primary" id="signupSubmitButton">가입하기</button>
+                </form>
+              </div>
+            </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
+  </body>
+</html> 
   </body>
 </html>
